maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:53: error: ')' expected but 'for' found.
    for ((a,b) <- nextCase) {
    ^